Manifests/monitoring/kubernetes-prometheus/prometheus-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
spec:
  selector:
    app: prometheus-server
  type: LoadBalancer
  ports:
    - port: 9090
      targetPort: 9090
