Manifests/monitoring/kubernetes-prometheus/prometheus-ingress.yaml
## Nginx Ingress
## Follow https://devopscube.com/setup-ingress-kubernetes-nginx-controller/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    ingressClassName: nginx
spec:
  rules:
    # Use the host you used in your kubernetes Ingress Configurations
    - host: prometheus.cluster-k8s.ov.universe-data.ru
      http:
        paths:
          - backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - prometheus.cluster-k8s.ov.universe-data.ru
      secretName: prometheus-secret
